--- a/contact.html
+++ b/contact.html
@@ -69,7 +69,7 @@
                 <form action="mailto:admin@pctech.com" method="post" class="contact-form" onsubmit="return validateForm();">
                     <div class="container">
                         <div class="row">
-                            <h4>Contact Us</h4>
+                            <h4>Get in tough with us</h4>
                         </div>
                         <div class="row">
                             <div class="col-6">
